--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'com.konghq:unirest-java:3.14.5'
+    implementation 'org.jetbrains:annotations:24.1.0'
     testImplementation 'junit:junit:4.13.1'
 }
 
