database connection established

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'com.konghq:unirest-java:3.14.5'
     implementation 'org.jetbrains:annotations:24.1.0'
+    implementation platform('tech.ydb:ydb-sdk-bom:2.1.10')
+    implementation 'tech.ydb:ydb-sdk-table'
+    implementation 'tech.ydb.auth:yc-auth-provider'
+    implementation 'ch.qos.logback:logback-classic:1.4.14'
     testImplementation 'junit:junit:4.13.1'
 }
 
