--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-deployFunctionName=food-diary
+deployFunctionName=skill
 deployRuntime=java21
-deployEntrypoint=Handler
-deployMemory=128m
-deployExecutionTimeout=3s
+deployEntrypoint=fooddiary.Handler
+deployMemory=1024m
+deployExecutionTimeout=10s
